crates/vespertide-exporter/src/gorm/tests/snapshots/vespertide_exporter__gorm__tests__composite_pk_nullable.snap
---
source: crates/vespertide-exporter/src/gorm/mod.rs
expression: result
---
package models

type OrderItems struct {
    OrderID int32 `gorm:"column:order_id;primaryKey;uniqueIndex:uq_order_items__order_product" json:"order_id"`
    Order Orders `gorm:"foreignKey:OrderID" json:"-"`
    ProductID int32 `gorm:"column:product_id;primaryKey;uniqueIndex:uq_order_items__order_product" json:"product_id"`
    Product Products `gorm:"foreignKey:ProductID" json:"-"`
    Quantity int32 `gorm:"column:quantity;not null" json:"quantity"`
    Note *string `gorm:"column:note;type:text" json:"note"`
}

func (OrderItems) TableName() string { return "order_items" }
