crates/vespertide-exporter/src/gorm/tests/snapshots/vespertide_exporter__gorm__tests__table_with_integer_enum.snap
---
source: crates/vespertide-exporter/src/gorm/mod.rs
expression: result
---
package models

type PriorityLevel int

const (
    PriorityLevelLow PriorityLevel = 0
    PriorityLevelMedium PriorityLevel = 10
    PriorityLevelHigh PriorityLevel = 20
)

type Tasks struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    Priority PriorityLevel `gorm:"column:priority;not null" json:"priority"`
}

func (Tasks) TableName() string { return "tasks" }
