crates/vespertide-exporter/src/gorm/tests/snapshots/vespertide_exporter__gorm__tests__table_with_jsonb_column.snap
---
source: crates/vespertide-exporter/src/gorm/mod.rs
expression: result
---
package models

import (
    "gorm.io/datatypes"
)

type Documents struct {
    ID int32 `gorm:"column:id;primaryKey;autoIncrement" json:"id"`
    Data datatypes.JSON `gorm:"column:data;not null;type:JSONB" json:"data"`
    Meta datatypes.JSON `gorm:"column:meta;not null" json:"meta"`
}

func (Documents) TableName() string { return "documents" }
