crates/vespertide-exporter/src/gorm/tests/snapshots/vespertide_exporter__gorm__tests__table_with_string_enum.snap
---
source: crates/vespertide-exporter/src/gorm/mod.rs
expression: result
---
package models

type OrderStatus string

const (
    OrderStatusPending OrderStatus = "pending"
    OrderStatusShipped OrderStatus = "shipped"
    OrderStatusDelivered OrderStatus = "delivered"
)

type Orders struct {
    ID int32 `gorm:"column:id;primaryKey;autoIncrement" json:"id"`
    Status OrderStatus `gorm:"column:status;not null;default:'pending'" json:"status"`
}

func (Orders) TableName() string { return "orders" }
